refactor code (#29)