@@ -4,6 +4,7 @@ import lombok.extern.slf4j.Slf4j;
 import org.apache.camel.CamelContext;
 import org.apache.camel.EndpointInject;
 import org.apache.camel.Exchange;
+import org.apache.camel.Route;
 import org.apache.camel.component.mock.MockEndpoint;
 import org.apache.camel.test.spring.junit5.CamelSpringBootTest;
 import org.apache.camel.test.spring.junit5.MockEndpoints;
@@ -18,7 +19,6 @@ import org.springframework.test.context.ActiveProfiles;
 
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.nio.file.StandardCopyOption;
 import java.time.Duration;
 import java.util.List;
@@ -26,7 +26,7 @@ import java.util.concurrent.TimeUnit;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
-import static ch.dboeckli.camel.routes.MyFileRouter.MY_FILE_ROUTE_ID;
+import static ch.dboeckli.camel.routes.MyFileRouter.*;
 import static org.assertj.core.api.Assertions.assertThat;
 
 @CamelSpringBootTest
@@ -34,19 +34,19 @@ import static org.assertj.core.api.Assertions.assertThat;
 @ActiveProfiles("local")
 @DirtiesContext
 @UseAdviceWith
-@MockEndpoints("file:files/output")
+@MockEndpoints("file:" + OUTPUT_DIR)
 @Slf4j
 class MyFileRouterTest {
 
     @Autowired
     private CamelContext camelContext;
 
-    @EndpointInject("mock:file:files/output")
+    @EndpointInject("mock:file:" + OUTPUT_DIR)
     private MockEndpoint outputMock;
 
-    private static final Path FILES_DIR = Paths.get("files");
-    private static final Path INPUT_DIR = FILES_DIR.resolve("input");
-    private static final Path OUTPUT_DIR = FILES_DIR.resolve("output");
+    private static final Path FILES_PATH = Path.of(INPUT_DIR).getParent();
+    private static final Path INPUT_PATH = Path.of(INPUT_DIR);
+    private static final Path OUTPUT_PATH = Path.of(OUTPUT_DIR);
 
 
     @BeforeEach
@@ -54,20 +54,20 @@ class MyFileRouterTest {
         camelContext.start();
 
         log.info("### Stopping all routes");
-        for (var route : camelContext.getRoutes()) {
+        for (Route route : camelContext.getRoutes()) {
             camelContext.getRouteController().stopRoute(route.getId());
         }
         prepareFileFolders();
-        assertThat(countRegularFiles(INPUT_DIR)).isEqualTo(countRegularFiles(FILES_DIR));
+        assertThat(countRegularFiles(INPUT_PATH)).isEqualTo(countRegularFiles(FILES_PATH));
 
-        log.info("### Starting route: {}", MY_FILE_ROUTE_ID);
-        camelContext.getRouteController().startRoute(MY_FILE_ROUTE_ID);
-        assertThat(camelContext.getRouteController().getRouteStatus(MY_FILE_ROUTE_ID).isStarted()).isTrue();
+        log.info("### Starting route: {}", COPY_FILES_ROUTE_ID);
+        camelContext.getRouteController().startRoute(COPY_FILES_ROUTE_ID);
+        assertThat(camelContext.getRouteController().getRouteStatus(COPY_FILES_ROUTE_ID).isStarted()).isTrue();
     }
 
     @Test
     void fileRoute_should_copy_files_to_output_folder() throws Exception {
-        var expectedNames = listRegularFileNames(INPUT_DIR);
+        List<String> expectedNames = listRegularFileNames(INPUT_PATH);
         outputMock.expectedMessageCount(expectedNames.size());
         outputMock.expectedHeaderValuesReceivedInAnyOrder(Exchange.FILE_NAME, expectedNames);
 
@@ -78,30 +78,30 @@ class MyFileRouterTest {
         Awaitility.await()
             .atMost(5, TimeUnit.SECONDS)
             .pollInterval(Duration.ofMillis(100))
-            .untilAsserted(() -> assertThat(countRegularFiles(OUTPUT_DIR)).isEqualTo(countRegularFiles(FILES_DIR)));
+            .untilAsserted(() -> assertThat(countRegularFiles(OUTPUT_PATH)).isEqualTo(countRegularFiles(FILES_PATH)));
     }
 
     private void prepareFileFolders() throws Exception {
-        Files.createDirectories(INPUT_DIR);
-        Files.createDirectories(OUTPUT_DIR);
+        Files.createDirectories(INPUT_PATH);
+        Files.createDirectories(OUTPUT_PATH);
 
-        deleteRegularFiles(INPUT_DIR);
-        deleteRegularFiles(OUTPUT_DIR);
+        deleteRegularFiles(INPUT_PATH);
+        deleteRegularFiles(OUTPUT_PATH);
 
         copyBaseFilesToInput();
         waitUntilInputContainsAllBaseFiles();
     }
 
-    private void deleteRegularFiles(Path dir) throws Exception {
-        if (Files.exists(dir)) {
-            try (Stream<Path> stream = Files.walk(dir, 1)) {
-                stream.filter(path -> !path.equals(dir))
+    private void deleteRegularFiles(Path path) throws Exception {
+        if (Files.exists(path)) {
+            try (Stream<Path> stream = Files.walk(path, 1)) {
+                stream.filter(foundPath -> !foundPath.equals(path))
                     .filter(Files::isRegularFile)
-                    .forEach(path -> {
+                    .forEach(foundPath -> {
                         try {
-                            Files.deleteIfExists(path);
+                            Files.deleteIfExists(foundPath);
                         } catch (Exception e) {
-                            throw new RuntimeException("Konnte Datei nicht löschen: " + path, e);
+                            throw new RuntimeException("Konnte Datei nicht löschen: " + foundPath, e);
                         }
                     });
             }
@@ -109,11 +109,11 @@ class MyFileRouterTest {
     }
 
     private void copyBaseFilesToInput() throws Exception {
-        if (Files.exists(FILES_DIR)) {
-            try (Stream<Path> stream = Files.list(FILES_DIR)) {
+        if (Files.exists(FILES_PATH)) {
+            try (Stream<Path> stream = Files.list(FILES_PATH)) {
                 stream.filter(Files::isRegularFile)
                     .forEach(src -> {
-                        var target = INPUT_DIR.resolve(src.getFileName());
+                        Path target = INPUT_PATH.resolve(src.getFileName());
                         try {
                             log.info("Copying file: {} -> {}", src, target);
                             Files.copy(src, target, StandardCopyOption.REPLACE_EXISTING);
@@ -123,32 +123,32 @@ class MyFileRouterTest {
                     });
             }
         }
-        Files.list(INPUT_DIR).forEach(path -> log.info("Input file: {}", path));
+        Files.list(INPUT_PATH).forEach(path -> log.info("Input file: {}", path));
     }
 
     private void waitUntilInputContainsAllBaseFiles() throws Exception {
-        List<String> expectedFileNames = listRegularFileNames(FILES_DIR);
+        List<String> expectedFileNames = listRegularFileNames(FILES_PATH);
         Awaitility.await()
             .atMost(Duration.ofSeconds(3))
             .pollInterval(Duration.ofMillis(100))
             .untilAsserted(() -> {
-                List<String> actualFileNames = listRegularFileNames(INPUT_DIR);
+                List<String> actualFileNames = listRegularFileNames(INPUT_PATH);
                 org.assertj.core.api.Assertions.assertThat(actualFileNames).containsAll(expectedFileNames);
             });
     }
 
-    private List<String> listRegularFileNames(Path dir) throws Exception {
-        if (!Files.exists(dir)) return java.util.List.of();
-        try (Stream<Path> pathStream = Files.list(dir)) {
+    private List<String> listRegularFileNames(Path path) throws Exception {
+        if (!Files.exists(path)) return java.util.List.of();
+        try (Stream<Path> pathStream = Files.list(path)) {
             return pathStream.filter(Files::isRegularFile)
-                .map(path -> path.getFileName().toString())
+                .map(foundPath -> foundPath.getFileName().toString())
                 .collect(Collectors.toList());
         }
     }
 
-    private int countRegularFiles(Path dir) throws Exception {
-        if (!Files.exists(dir)) return 0;
-        try (Stream<Path> pathStream = Files.list(dir)) {
+    private int countRegularFiles(Path path) throws Exception {
+        if (!Files.exists(path)) return 0;
+        try (Stream<Path> pathStream = Files.list(path)) {
             return (int) pathStream.filter(Files::isRegularFile).count();
         }
     }
